[Fix] -> Popup spacing and font size styling.

--- a/inc/customizer/custom-controls/divider/divider.scss
+++ b/inc/customizer/custom-controls/divider/divider.scss
@@ -18,7 +18,7 @@
 		border-style: solid;
 		border-color: #dddddd;
 		line-height: 1;
-		margin-top: 12px;
+		margin-top: 15px;
 		.customize-control-title {
 			font-weight: 500;
 			letter-spacing: 1px;
